Friend list in player profile

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,6 +11,7 @@
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
         <link rel="stylesheet" href="{{ asset('assets/css/material-dashboard.min.css') }}" type="text/css" media="all" />
+        <link rel="stylesheet" href="{{ asset('assets/css/main.css') }}" type="text/css" media="all" />
         {% block stylesheets %}{% endblock %}
         <!-- Scripts -->
         <script type="text/javascript" src="{{ asset('assets/js/core/jquery.min.js') }}"></script>
@@ -23,8 +24,8 @@
         <div class="wrapper ">
             <div class="sidebar" data-color="green" data-background-color="black" data-image="../assets/img/sidebar-2.jpg">
                 <div class="logo">
-                    <a href="http://www.creative-tim.com" class="simple-text logo-normal">
-                        Creative Tim
+                    <a href="#" class="simple-text logo-normal">
+                        <img src="{{ asset('assets/img/logo.png') }}" alt="Steam logo" class="w-25"/>
                     </a>
                 </div>
                 <div class="sidebar-wrapper">
