--- a/src/AppBundle/Resources/views/Steam/ajax/_friendList.html.twig
+++ b/src/AppBundle/Resources/views/Steam/ajax/_friendList.html.twig
@@ -1,4 +1,5 @@
-<h2 class="text-right">{{ 'All:'|trans }} x</h2>
+<h2 class="text-right">{{ 'All'|trans }}: {{ all }}</h2>
+
 {% for player in list %}
 
     {% if player.personaState == constant('AppBundle\\Model\\SteamPlayer::STATE_OFFLINE') %}
@@ -13,11 +14,20 @@
     {% endif %}
 
     <div class="card-body shadow-in-block">
-        <img class="img d-inline mr-3" src="{{ player.avatarMedium }}" alt="{{ player.personaName }}" />
-        <h4 class="d-inline">{{ player.personaName }}</h4>
-        <a href="{{ path('steam_player', {'steamId': player.steamId}) }}" class="btn btn-success btn-sm float-right"
+        <a href="{{ path('steam_player', {'steamId': player.steamId}) }}" class="w-100"
            title="{{ 'View profile'|trans }}">
-            {{ icon('person', '', 'font-size:2em;') }}
+            <div class="d-inline">
+                <img class="img d-inline mr-3 border border-3 border-{{ color }}" src="{{ player.avatarMedium }}" alt="{{ player.personaName }}" />
+            </div>
+            <h4 class="d-inline">{{ player.personaName }}</h4>
+            <div class="d-inline text-right position-absolute" style="right:10px;">
+                <img src="https://steamcommunity-a.akamaihd.net/public/images/countryflags/{{ player.locCountryCode|lower }}.gif"
+                         alt="{{ player.locCountryCode|lower }}"/>
+                <span class="d-block text-{{ color }}">{{ icon(icon, 'small align-baseline') }} {{ playerStatus(player.personaState) }}</span>
+                {% if player.personaState == constant('AppBundle\\Model\\SteamPlayer::STATE_OFFLINE') %}
+                    <span class="d-block small text-gray">{{ 'Last online'|trans }}: {{ player.lastLogOff|date("d.m.Y H:i:s") }}</span>
+                {% endif %}
+            </div>
         </a>
     </div>
 
